[package]
name = "backend"
version = "0.1.0"
authors = ["shyu61 <ohs6261@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
serde = "1.0.125"
serde_json = "1.0.64"
